--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -4,27 +4,76 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Movies</h1>
+    <form id="movie-database">
 
-<ul class="movie-list">
-    @foreach(Movie movie in MovieDatabase.All)
-    {
-        <li>
-            <div class="details">
-                <h3 class="title">@movie.Title</h3>
-                <div class="mpaa">@movie.MPAARating</div>
-                <div class="genre">@movie.MajorGenre</div>
+        <div id="search">
+            <input type="text" name="SearchTerms" value="@Model.SearchTerms" />
+            <input type="submit" value="Search" />
+        </div>
+
+        <div id="filters">
+
+            <h4>MPAA Ratings</h4>
+            @foreach (String rating in MovieDatabase.MPAARatings)
+            {
+                <label>
+                    <input type="checkbox" name="MPAARatings" value="@rating" checked="@Model.MPAARatings?.Contains(rating)" />
+                    @rating
+                </label>
+            }
+
+            <h4>Genre</h4>
+            @foreach (String genre in MovieDatabase.Genres)
+            {
+                <label>
+                    <input type="checkbox" name="Genres" value="@genre" checked="@Model.Genres?.Contains(genre)" />
+                    @genre
+                </label>
+            }
+
+            <h4>IMDB Rating</h4>
+            <div>
+                Between
+                <input name="IMDBMin" type="number" min="0" max="10" step="0.1" placeholder="min" />
+                and
+                <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="max" />
             </div>
-            <div class="ratings">
-                @if(movie.IMDBRating != null)
-                {
-                    <div class="imdb">@movie.IMDBRating</div>
-                }
-                @if(movie.RottenTomatoesRating != null)
-                {
-                    <div class="rotten-tomatoes">@movie.RottenTomatoesRating</div>
-                }
+            <h4>Rotten Tomatoe Rating</h4>
+            <div>
+                Between
+                <input name="RottenTomatoeMin" type="number" min="0" max="100" step="0.1" placeholder="min" />
+                and
+                <input name="RottenTomatoeMax" type="number" min="0" max="100" step="0.1" placeholder="max" />
             </div>
-        </li>
-    }
-</ul>
+
+        </div>
+
+
+        <div id="results">
+            <h1>Movie Results</h1>
+
+            <ul class="movie-list">
+                @foreach (Movie movie in Model.Movies)
+                {
+                    <li>
+                        <div class="details">
+                            <h3 class="title">@movie.Title</h3>
+                            <div class="mpaa">@movie.MPAARating</div>
+                            <div class="genre">@movie.MajorGenre</div>
+                        </div>
+                        <div class="ratings">
+                            @if (movie.IMDBRating != null)
+                            {
+                                <div class="imdb">@movie.IMDBRating</div>
+                            }
+                            @if (movie.RottenTomatoesRating != null)
+                            {
+                                <div class="rotten-tomatoes">@movie.RottenTomatoesRating</div>
+                            }
+                        </div>
+                    </li>
+                }
+            </ul>
+        </div>
+
+    </form>
